--- a/charts/dapr/charts/dapr_rbac/templates/secret-reader.yaml
+++ b/charts/dapr/charts/dapr_rbac/templates/secret-reader.yaml
@@ -13,6 +13,9 @@ rules:
 - apiGroups: [""]
   resources: ["secrets"]
   verbs: ["get"]
+- apiGroups: ["coordination.k8s.io"]
+  resources: ["leases"]
+  verbs: ["get", "create", "update", "patch", "delete"]
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
