--- a/charts/dapr/Chart.yaml
+++ b/charts/dapr/Chart.yaml
@@ -19,3 +19,6 @@ dependencies:
   - name: dapr_sentry
     version: '0.0.0'
     repository: "file://dapr_sentry"
+  - name: dapr_actors
+    version: '0.0.0'
+    repository: "file://dapr_actors"
