--- a/charts/dapr/charts/dapr_actors/templates/dapr_actors_poddisruptionbudget.yaml
+++ b/charts/dapr/charts/dapr_actors/templates/dapr_actors_poddisruptionbudget.yaml
@@ -1,4 +1,5 @@
-{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.v2 false) }}
+{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.v2 true) }}
+{{- if eq .Values.global.ha.enabled true }}
 {{- if .Capabilities.APIVersions.Has "policy/v1" }}
 apiVersion: policy/v1
 {{- else }}
@@ -6,10 +7,10 @@ apiVersion: policy/v1beta1
 {{- end }}
 kind: PodDisruptionBudget
 metadata:
-  name: dapr-placement-server-disruption-budget
+  name: dapr-actors-disruption-budget
   namespace: {{ .Release.Namespace }}
   labels:
-    app: dapr-placement-server
+    app: dapr-actors
     {{- range $key, $value := .Values.global.k8sLabels }}
     {{ $key }}: {{ tpl $value $ }}
     {{- end }}
@@ -22,11 +23,12 @@ spec:
 {{- end }}
   selector:
     matchLabels:
-      app: dapr-placement-server
+      app: dapr-actors
       {{- range $key, $value := .Values.global.k8sLabels }}
       {{ $key }}: {{ tpl $value $ }}
       {{- end }}
       {{- with .Values.global.labels }}
         {{- toYaml . | nindent 6 }}
       {{- end }}
+{{- end }}
 {{- end }}
