--- a/charts/dapr/charts/dapr_actors/values.yaml
+++ b/charts/dapr/charts/dapr_actors/values.yaml
@@ -15,6 +15,13 @@ deploymentAnnotations: {}
 
 runAsNonRoot: true
 
+store:
+  name: ""
+  options: []
+  optionsFile:
+    secretName: ""
+    secretKey: ""
+
 ports:
   protocol: TCP
   port: 51101
