Fixes after merging master
Signed-off-by: ItalyPaleAle <43508+ItalyPaleAle@users.noreply.github.com>

--- a/charts/dapr/charts/dapr_actors/templates/dapr_actors_deployment.yaml
+++ b/charts/dapr/charts/dapr_actors/templates/dapr_actors_deployment.yaml
@@ -76,6 +76,7 @@ spec:
           capabilities:
             add: ["SYS_PTRACE"]
   {{- else }}
+          readOnlyRootFilesystem: true
           capabilities:
             drop: ["ALL"]
   {{- end }}
@@ -150,6 +151,8 @@ spec:
           {{- end }}
           - "--log-level"
           - "{{ .Values.logLevel }}"
+          - "--mode"
+          - "kubernetes"
           - "--enable-mtls"
           - "--trust-anchors-file"
           - "/var/run/secrets/dapr.io/tls/ca.crt"
