Comment-out some Actions
Signed-off-by: ItalyPaleAle <43508+ItalyPaleAle@users.noreply.github.com>

--- a/.github/workflows/dapr-bot.yml
+++ b/.github/workflows/dapr-bot.yml
@@ -1,10 +1,10 @@
 name: dapr-bot
 
 on:
-  issue_comment:
-    types: [created]
-  issues:
-    types: [labeled]
+  #issue_comment:
+  #  types: [created]
+  #issues:
+  #  types: [labeled]
 
 jobs:
   daprbot:
