--- a/.github/workflows/dapr-3rdparty-images.yaml
+++ b/.github/workflows/dapr-3rdparty-images.yaml
@@ -1,8 +1,8 @@
 name: dapr-mirror-images
 
 on:
-  schedule:
-    - cron: '0 0 1 * *' # trigger on the 1st of every month at midnight
+  #schedule:
+  #  - cron: '0 0 1 * *' # trigger on the 1st of every month at midnight
   workflow_dispatch:
 
 jobs:
