--- a/.github/workflows/kind-e2e.yaml
+++ b/.github/workflows/kind-e2e.yaml
@@ -22,6 +22,11 @@ on:
       - master
       - 'release-*'
       - 'feature/*'
+  push:
+    branches:
+      - master
+      - 'release-*'
+      - 'feature/*'
 
 defaults:
   run:
