--- a/.github/workflows/dapr-standalone-validation.yml
+++ b/.github/workflows/dapr-standalone-validation.yml
@@ -56,17 +56,17 @@ jobs:
           go-version-file: "go.mod"
       - name: Build Dapr's sidecar
         run: make ./dist/${GOOS}_${GOARCH}/release/daprd
-      - name: Check out code at master branch for PR validation
+      - name: Check out code at main branch for PR validation
         if: github.event_name == 'pull_request'
         uses: actions/checkout@v3
         with:
           repository: ${{ env.CHECKOUT_REPO }}
-          ref: master
-          path: .master
-      - name: Build and override daprd with master version
+          ref: main
+          path: .main
+      - name: Build and override daprd with main version
         if: github.event_name == 'pull_request'
         run: |
-          cd .master
+          cd .main
           make ./dist/${GOOS}_${GOARCH}/release/daprd
           mkdir -p $HOME/.dapr/bin/
           cp dist/${GOOS}_${GOARCH}/release/daprd $HOME/.dapr/bin/daprd
