--- a/.github/workflows/dapr.yml
+++ b/.github/workflows/dapr.yml
@@ -180,7 +180,7 @@ jobs:
         uses: codecov/codecov-action@v1
       - name: Upload test results
         if: always()
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.target_os }}_${{ matrix.target_arch }}_test_unit.json
           path: ${{ env.TEST_OUTPUT_FILE_PREFIX }}_unit.json
@@ -400,19 +400,19 @@ jobs:
           make release-flavor
         shell: bash
       - name: upload artifacts
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v3
         with:
           name: dapr_${{ matrix.target_os }}_${{ matrix.target_arch }}_${{ matrix.sidecar_flavor }}
           path: ${{ env.ARCHIVE_OUTDIR }}
       - name: upload artifacts - grafana dashboards
         if: matrix.target_arch == 'amd64' && matrix.target_os == 'linux' && matrix.sidecar_flavor == 'allcomponents'
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v3
         with:
           name: dapr_grafana_dashboards
           path: ./grafana/*.json
       - name: Docker Hub Login
         if: matrix.target_os != 'darwin' && github.event_name != 'pull_request' && env.DOCKER_REGISTRY_ID != ''
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         env:
           DOCKER_REGISTRY_ID: ${{ secrets.DOCKER_REGISTRY_ID }}
         with:
@@ -420,7 +420,7 @@ jobs:
           password: ${{ secrets.DOCKER_REGISTRY_PASS }}
       - name: GitHub Container Registry login
         if: matrix.target_os != 'darwin' && github.event_name != 'pull_request'
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
@@ -435,11 +435,12 @@ jobs:
           WINDOWS_VERSION: ${{ matrix.windows_version }}
         run: |
           echo "Build Docker images and push to Docker Hub..."
-          DAPR_TAG=${{ env.REL_VERSION }} make docker-push
 
           # Mariner images are built only on linux/amd64 and linux/arm64
           if [ "$TARGET_OS" = "linux" ] && [ "$TARGET_ARCH" != "arm" ]; then
-            DOCKERFILE=Dockerfile-mariner DAPR_TAG="${{ env.REL_VERSION }}-mariner" make docker-push
+            DOCKERFILE=Dockerfile-mariner DAPR_TAG="${{ env.REL_VERSION }}" make docker-push
+          else
+            DAPR_TAG="${{ env.REL_VERSION }}" make docker-push
           fi
         shell: bash
       - name: Build and push Docker images to GHCR
@@ -451,11 +452,12 @@ jobs:
           WINDOWS_VERSION: ${{ matrix.windows_version }}
         run: |
           echo "Build Docker images and push to GHCR..."
-          DAPR_TAG=${{ env.REL_VERSION }} make docker-push
 
           # Mariner images are built only on linux/amd64 and linux/arm64
           if [ "$TARGET_OS" = "linux" ] && [ "$TARGET_ARCH" != "arm" ]; then
-            DOCKERFILE=Dockerfile-mariner DAPR_TAG="${{ env.REL_VERSION }}-mariner" make docker-push
+            DOCKERFILE=Dockerfile-mariner DAPR_TAG="${{ env.REL_VERSION }}" make docker-push
+          else
+            DAPR_TAG="${{ env.REL_VERSION }}" make docker-push
           fi
         shell: bash
   publish:
@@ -547,7 +549,7 @@ jobs:
           # Parse repository to get owner and repo names
           OWNER_NAME="${GITHUB_REPOSITORY%%/*}"
           REPO_NAME="${GITHUB_REPOSITORY#*/}"
-          export GITHUB_TOKEN=${{ secrets.DAPR_BOT_TOKEN }}
+          export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
           echo "Uploading Dapr Runtime Binaries to GitHub Release"
           github-release upload \
             --owner $OWNER_NAME \
@@ -569,7 +571,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        sidecar_flavor: ["allcomponents", "stablecomponents"]
+        sidecar_flavor: ["allcomponents"]
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -592,13 +594,14 @@ jobs:
           # Lowercase the value
           echo "REPO_OWNER=${REPO_OWNER,,}" >>${GITHUB_ENV}
       - name: Docker Hub Login
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         if: env.DOCKER_REGISTRY != ''
         with:
+          registry: ${{ secrets.DOCKER_REGISTRY }}
           username: ${{ secrets.DOCKER_REGISTRY_ID }}
           password: ${{ secrets.DOCKER_REGISTRY_PASS }}
       - name: GitHub Container Registry login
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
@@ -611,14 +614,6 @@ jobs:
         run: |
           echo "Build Docker multiarch manifest and push to Docker"
           DAPR_TAG="${{ env.REL_VERSION }}" make docker-publish
-
-          # Publish the `-mariner` tag
-          # Mariner images are built only on linux/amd64 and linux/arm64
-          # Also, these use the "latest-mariner" tag if it's the latest
-          DOCKER_MULTI_ARCH="linux-amd64 linux-arm64" \
-          DAPR_TAG="${{ env.REL_VERSION }}-mariner" \
-          LATEST_TAG=${{ env.LATEST_TAG }}-mariner \
-            make docker-publish
         shell: bash
       - name: Build and push Docker multiarch Windows manifest to Docker Hub
         if: env.DOCKER_REGISTRY_ID != '' && matrix.sidecar_flavor == 'allcomponents'
@@ -641,14 +636,6 @@ jobs:
         run: |
           echo "Build Docker multiarch manifest and push to GHCR"
           DAPR_TAG="${{ env.REL_VERSION }}" make docker-publish
-
-          # Publish the `-mariner` tag
-          # Mariner images are built only on linux/amd64 and linux/arm64
-          # Also, these use the "latest-mariner" tag if it's the latest
-          DOCKER_MULTI_ARCH="linux-amd64 linux-arm64" \
-          DAPR_TAG="${{ env.REL_VERSION }}-mariner" \
-          LATEST_TAG=${{ env.LATEST_TAG }}-mariner \
-            make docker-publish
       - name: Build and push Docker multiarch Windows manifest to GHCR
         if: matrix.sidecar_flavor == 'allcomponents'
         env:
@@ -672,11 +659,11 @@ jobs:
       HELM_PACKAGE_DIR: helm
       DAPR_VERSION_ARTIFACT: dapr_version
       DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-      HELMVER: v3.7.2
+      HELMVER: v3.13.2
     runs-on: ubuntu-latest
     steps:
       - name: Set up Helm ${{ env.HELMVER }}
-        uses: azure/setup-helm@v1
+        uses: azure/setup-helm@v3
         with:
           version: ${{ env.HELMVER }}
       - name: Check out code into the Go module directory
@@ -684,7 +671,6 @@ jobs:
       - name: Parse release version and set REL_VERSION and LATEST_RELEASE
         run: python ./.github/scripts/get_release_version.py ${{ github.event_name }}
       - name: Set REPO_OWNER
-        if: matrix.target_os != 'darwin'
         shell: bash
         run: |
           REPO_OWNER=${{ github.repository_owner }}
@@ -718,62 +704,44 @@ jobs:
           helm package ${{ env.HELM_CHARTS_DIR }} --destination ${{ env.ARTIFACT_DIR }}/${{ env.HELM_PACKAGE_DIR }}
       - name: Upload Helm charts package to artifacts
         if: ${{ env.LATEST_RELEASE }} == "true" && env.DOCKER_REGISTRY != ''
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v3
         with:
           name: dapr_helm_charts_package
           path: ${{ env.ARTIFACT_DIR }}/${{ env.HELM_PACKAGE_DIR }}
-  # This job downloads the helm charts package artifact uploaded by the publish job,
-  # checks out the helm charts git hub pages repo and commits the latest version of
-  # helm charts package.
-  # This does not run on forks
-  helmpublish:
-    name: Publish helm charts to Helm github pages repo
-    needs: helm
-    if: startswith(github.ref, 'refs/tags/v') && github.repository_owner == 'dapr'
-    env:
-      ARTIFACT_DIR: ./release
-      DAPR_VERSION_ARTIFACT: dapr_version
-      HELM_PACKAGE_DIR: helm
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create Helm charts directory
-        run: |
-          mkdir -p ${{ env.ARTIFACT_DIR }}/${{ env.HELM_PACKAGE_DIR }}
-      - name: download artifacts - dapr_helm_charts_package
-        uses: actions/download-artifact@master
-        with:
-          name: dapr_helm_charts_package
-          path: ${{ env.ARTIFACT_DIR }}/${{ env.HELM_PACKAGE_DIR }}
-      - name: Checkout Helm Charts Repo
-        uses: actions/checkout@v3
+      - name: Docker Hub Login
+        if: env.DOCKER_REGISTRY_ID != ''
+        uses: docker/login-action@v3
         env:
-          DAPR_HELM_REPO: dapr/helm-charts
-          DAPR_HELM_REPO_CODE_PATH: helm-charts
+          DOCKER_REGISTRY_ID: ${{ secrets.DOCKER_REGISTRY_ID }}
         with:
-          repository: ${{ env.DAPR_HELM_REPO }}
-          ref: refs/heads/master
-          token: ${{ secrets.DAPR_BOT_TOKEN }}
-          path: ${{ env.DAPR_HELM_REPO_CODE_PATH }}
-      - name: Upload helm charts to Helm Repo
-        env:
-          DAPR_HELM_REPO_CODE_PATH: helm-charts
-          DAPR_HELM_REPO: https://dapr.github.io/helm-charts/
-        run: |
-          daprVersion=`cat ${{ env.ARTIFACT_DIR }}/${{ env.HELM_PACKAGE_DIR }}/${{ env.DAPR_VERSION_ARTIFACT }}`
-          cd ${{ env.ARTIFACT_DIR }}/${{ env.HELM_PACKAGE_DIR }}
-          cp -r `ls -A | grep -v ${{ env.DAPR_VERSION_ARTIFACT }}` $GITHUB_WORKSPACE/${{ env.DAPR_HELM_REPO_CODE_PATH }}
-          cd $GITHUB_WORKSPACE/${{ env.DAPR_HELM_REPO_CODE_PATH }}
-          helm repo index --url ${{ env.DAPR_HELM_REPO }} --merge index.yaml .
-          git config --global user.email "daprweb@microsoft.com"
-          git config --global user.name "dapr-bot"
-          git add --all
-          # Check if the dapr-${daprVersion}.tgz file is modified.
-          if git diff --name-only --staged | grep -q ${daprVersion}; then
-            # If it is, we update the Helm chart, since this is an intentional update.
-            git commit -m "Release - $daprVersion"
-            git push
-          else
-            # If not, this update was accidentally triggered by tagging a release before updating the Helm chart.
-            echo "::error::There is no change for ${daprVersion} Helm chart. Did you forget to update the chart version before tagging?"
-            exit -1
-          fi
+          registry: ${{ secrets.DOCKER_REGISTRY }}
+          username: ${{ secrets.DOCKER_REGISTRY_ID }}
+          password: ${{ secrets.DOCKER_REGISTRY_PASS }}
+      - name: GitHub Container Registry login
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ env.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Push Helm chart to Docker Hub
+        uses: appany/helm-oci-chart-releaser@v0.4.1
+        with:
+          name: dapr
+          repository: dapr/chart
+          tag: ${{ env.REL_VERSION }}
+          path: ${{ env.ARTIFACT_DIR }}/${{ env.HELM_PACKAGE_DIR }}/${{ env.DAPR_VERSION_ARTIFACT }}
+          registry: ${{ secrets.DOCKER_REGISTRY }}
+          registry_username: ${{ secrets.DOCKER_REGISTRY_ID }}
+          registry_password: ${{ secrets.DOCKER_REGISTRY_PASS }}
+      - name: Push Helm chart to GHCR
+        uses: appany/helm-oci-chart-releaser@v0.4.1
+        with:
+          name: dapr
+          repository: dapr/chart
+          tag: ${{ env.REL_VERSION }}
+          path: ${{ env.ARTIFACT_DIR }}/${{ env.HELM_PACKAGE_DIR }}/${{ env.DAPR_VERSION_ARTIFACT }}
+          registry: ghcr.io
+          registry_username: ${{ secrets.repository_owner }}
+          registry_password: ${{ secrets.GITHUB_TOKEN }}
+
