--- a/.github/workflows/dapr.yml
+++ b/.github/workflows/dapr.yml
@@ -565,7 +565,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ env.repository_owner }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push Helm chart to Docker Hub
         uses: appany/helm-oci-chart-releaser@v0.4.1
