--- a/charts/dapr/values.yaml
+++ b/charts/dapr/values.yaml
@@ -1,5 +1,5 @@
 global:
-  registry: docker.io/daprio
+  registry: ghcr.io/microsoft/project-emmy
   tag: 'edge'
   dnsSuffix: ".cluster.local"
   logAsJson: false
