Run on pushes only
Signed-off-by: ItalyPaleAle <43508+ItalyPaleAle@users.noreply.github.com>

--- a/.github/workflows/component-conformance.yaml
+++ b/.github/workflows/component-conformance.yaml
@@ -17,13 +17,18 @@ on:
   workflow_dispatch:
   push:
     branches:
+      - 'main'
+      - 'master'
       - 'release-*'
       - 'gh-readonly-queue/main/*'
+      - 'gh-readonly-queue/master/*'
   pull_request:
     branches:
       - 'main'
+      - 'master'
       - 'release-*'
       - 'gh-readonly-queue/main/*'
+      - 'gh-readonly-queue/master/*'
   merge_group:
 
 jobs:
