Enable SQLite conf tests + fix using in-memory DBs
Signed-off-by: ItalyPaleAle <43508+ItalyPaleAle@users.noreply.github.com>

--- a/tests/conformance/config/actorstore/sqlite/actorstore.yml
+++ b/tests/conformance/config/actorstore/sqlite/actorstore.yml
@@ -8,3 +8,5 @@ spec:
   metadata:
     - name: connectionString
       value: "file::memory:"
+      # To test using a database on disk
+      #value: "file:test.db"
