Updates to Helm chart
Signed-off-by: ItalyPaleAle <43508+ItalyPaleAle@users.noreply.github.com>

--- a/charts/dapr/charts/dapr_emmy/templates/dapr_actors_poddisruptionbudget.yaml
+++ b/charts/dapr/charts/dapr_emmy/templates/dapr_actors_poddisruptionbudget.yaml
@@ -1,4 +1,4 @@
-{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.v2 true) }}
+{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.serviceName emmy) }}
 {{- if eq .Values.global.ha.enabled true }}
 {{- if .Capabilities.APIVersions.Has "policy/v1" }}
 apiVersion: policy/v1
