--- a/charts/dapr/charts/dapr_emmy/templates/dapr_actors_deployment.yaml
+++ b/charts/dapr/charts/dapr_emmy/templates/dapr_actors_deployment.yaml
@@ -1,4 +1,4 @@
-{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.v2 true) }}
+{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.serviceName emmy) }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
