--- a/charts/dapr/charts/dapr_rbac/templates/actors.yaml
+++ b/charts/dapr/charts/dapr_rbac/templates/actors.yaml
@@ -1,4 +1,4 @@
-{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.v2 true) }}
+{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.serviceName emmy) }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -10,7 +10,7 @@ metadata:
     {{- end }}
 {{- end }}
 ---
-{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.v2 true) }}
+{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.serviceName emmy) }}
 {{- if eq .Values.global.rbac.namespaced true }}
 kind: Role
 {{- else }}
@@ -26,7 +26,7 @@ metadata:
 rules: []
 {{- end }}
 ---
-{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.v2 true) }}
+{{- if and (eq .Values.global.actors.enabled true) (eq .Values.global.actors.serviceName emmy) }}
 {{- if eq .Values.global.rbac.namespaced true }}
 kind: RoleBinding
 {{- else }}
